Revise Java Coding Guide to enhance clarity and conciseness in rules and guidelines, including UI construction, threading, and resource management