@@ -3,12 +3,6 @@
 This document is the authoritative coding guide for this repository.
 It is optimized for both humans and GitHub Copilot context prompts.
 
-## How to Use This Guide
-
-- Read this file as a ruleset, not as prose.
-- Treat each bullet as one atomic rule.
-- Follow rule priority when rules appear to conflict.
-
 ## Normative Keywords
 
 - **MUST**: mandatory requirement.
@@ -80,14 +74,11 @@ Apply rules in this order (highest first):
 
 ### UI Construction
 
-- [MUST] Build the scene graph programmatically in Java; do not use FXML.
-- [MUST NOT] Add `.fxml` files or `FXMLLoader` usage to the project.
-- [SHOULD] Compose UIs from small, focused factory/builder methods (`createX`, `buildX`).
+- [MUST] Build the scene graph programmatically in Java; do not use FXML or `FXMLLoader`, and do not add `.fxml` files
+  to the project.
 - [SHOULD] Use `FXComponentFactory` for standard styled controls instead of instantiating and styling them ad hoc;
   direct instantiation is acceptable for one-off layouts that the factory does not cover.
 - [SHOULD] Keep `Scene`, `Stage`, and root container wiring in dedicated entry-point/View classes.
-- [SHOULD] Prefer standard controls from `javafx.controls`; introduce custom controls only when standard controls are
-  insufficient.
 
 ### Threading
 
@@ -95,9 +86,8 @@ Apply rules in this order (highest first):
 - [MUST] Use `Platform.runLater(...)` to marshal updates from background threads to the FX thread.
 - [SHOULD] Re-check relevant state (for example simulation state) inside the `Platform.runLater(...)` body before
   applying updates, because state may have changed in the meantime.
-- [SHOULD] Use `javafx.concurrent.Task`/`Service` or a dedicated executor for long-running background work that updates
-  the UI.
-- [MUST NOT] Block the JavaFX Application Thread with long-running computation or I/O.
+- [MUST NOT] Block the JavaFX Application Thread with long-running computation or I/O; use `javafx.concurrent.Task`/
+  `Service` or a dedicated executor for such work.
 - [SHOULD] Use `Timeline`/`AnimationTimer` for periodic UI ticks and frame-driven rendering; encapsulate periodic
   simulation drivers (for example `SimulationTimer`) instead of using `Timeline` directly in Views.
 
@@ -108,8 +98,6 @@ Apply rules in this order (highest first):
   `ObservableValue` or a repository wrapper such as `InputDoubleProperty`.
 - [SHOULD] When exposing a plain JavaFX property, also provide `getX()`/`setX(...)` accessors consistent with the
   property type.
-- [MAY] Expose ordered groups of related properties via a `getXProperties()` accessor returning
-  `List<? extends Property<?>>` or similar; document the index meaning.
 - [MUST] Keep property field declared types compatible with their public accessor return types (for example, do not
   expose a `SimpleStringProperty` field as `ObjectProperty<String>`).
 - [SHOULD] Unbind explicit bindings and remove explicit listeners when their owner is shut down (for example in
@@ -119,19 +107,16 @@ Apply rules in this order (highest first):
 ### CSS and Styling
 
 - [MUST] Define visual styling in CSS files under `app/src/main/resources/css/` (for example `scene.css`, `conway.css`,
-  `etpets.css`, `lab.css`).
-- [MUST] Attach stylesheets via `Scene.getStylesheets()` or `Parent.getStylesheets()` using classpath URLs.
+  `etpets.css`, `lab.css`); use a shared `scene.css` for global rules and add a dedicated CSS file per simulation/
+  feature when it needs visual rules beyond `scene.css`.
 - [MUST] Resolve CSS resources through `AppResources.getCssUrl(...)` rather than calling `getClass().getResource(...)`
   ad hoc.
-- [MUST] Use a shared `scene.css` for global rules.
-- [SHOULD] Add a dedicated CSS file per simulation/feature when it needs visual rules beyond `scene.css`.
 - [MUST NOT] Hardcode colors, fonts, or sizing in Java when an equivalent CSS rule is practical; values used only for
   `Canvas` rendering or other non-CSS-styleable APIs are exempt.
 - [MUST NOT] Use inline `setStyle(...)` for styling; use style classes instead.
 - [MUST] Reference CSS style classes via constants (no string literals at call sites).
 - [MUST] Use `FXStyleClasses` for cross-cutting style classes; use a simulation-local `XStyleClasses` class (for example
   `ConwayStyleClasses`) for style classes that exist only inside one simulation package.
-- [SHOULD] Apply style classes via `getStyleClass().add(...)` (or via factory methods that do so).
 - [SHOULD] Use lower-kebab-case for CSS style class names (for example `simulation-canvas`, `config-vbox`,
   `conway-transitionrules-gridpane`).
 - [SHOULD] Use JavaFX CSS variables (`-fx-*` looked-up colors) for shared theme values.
@@ -142,39 +127,32 @@ Apply rules in this order (highest first):
   `getClass().getResource(...)`).
 - [MUST] Centralize user-facing text in `ResourceBundle` properties files using base name `i18n.messages` and access
   them via `AppLocalization`.
-- [MUST] Reference resource bundle keys via constants; do not pass string literals to `AppLocalization`.
-- [MUST] Define cross-cutting keys (used from multiple simulations or from shared infrastructure) in
-  `AppLocalizationKeys`.
-- [MAY] Define simulation-local keys (used only inside one simulation package) as `private static final String`
-  constants in the consuming View class.
+- [MUST] Reference resource bundle keys via constants; do not pass string literals to `AppLocalization`. Define
+  cross-cutting keys (used from multiple simulations or shared infrastructure) in `AppLocalizationKeys`; simulation-
+  local keys may live as `private static final String` constants in the consuming View class.
 - [MUST] Keep resource bundle keys sorted alphabetically (see Encoding and File Conventions).
 
 ## Code Style
 
 ### General Java Style
 
-- [SHOULD] Prefer clear domain terms over abbreviations.
 - [MUST NOT] Add comments that only restate obvious code.
 - [SHOULD] Prefer modern Java APIs/features when they improve clarity and are compatible with Java 25.
 - [MUST] Use locale-stable normalization for technical text (for example, `toLowerCase(Locale.ROOT)`).
 
 ### Java Records
 
-- [SHOULD] Use records for small immutable value carriers.
-- [MUST] Keep record components limited to essential stored state.
-- [SHOULD] Move derived/convenience behavior to small methods.
-- [MUST] Use canonical/compact constructors to enforce invariants when needed.
-- [MUST] Defensively copy mutable inputs (collections, maps, arrays) before storing.
-- [SHOULD] Add static factories only when they provide clear value (validation, parsing, defaults).
+- [SHOULD] Use records for small immutable value carriers; move derived/convenience behavior to small methods.
+- [MUST] Use canonical/compact constructors to enforce invariants and to defensively copy mutable inputs (collections,
+  maps, arrays) before storing.
 
 ### Enums
 
 - [MUST] Use enums only for fixed, closed domain sets.
 - [SHOULD] Place enum behavior/metadata on the enum type itself.
-- [SHOULD] Use exhaustive `switch` expressions for enum branching.
-- [SHOULD NOT] Use a `default` branch when all constants are known.
-- [MUST NOT] Persist or exchange `ordinal()`.
-- [MUST] Use explicit stable codes/keys for external representations.
+- [SHOULD] Use exhaustive `switch` expressions for enum branching; do not add a `default` branch when all constants are
+  known.
+- [MUST] Use explicit stable codes/keys for external representations; never persist or exchange `ordinal()`.
 - [MUST] Document declaration-order semantics in type Javadoc when order matters.
 
 ### Naming Conventions
@@ -229,11 +207,9 @@ Use these method naming patterns across the codebase.
 
 #### Accepted Compact Names
 
-- [MAY] Utility/value APIs use concise noun-style accessors.
-  Example: `locale()`, `bundle()`, `keys()`, `supportedLocales()`
-- [MAY] Immutable domain types use concise derived-operation names.
-  Example: `area()`, `perimeter()`, `aspectRatio()`, `opposite()`, `nextClockwise()`
-- [MAY] Functional combinators use short composition names.
+- [MAY] Use concise noun-style or derived-operation names on utility/value APIs and immutable domain types.
+  Example: `locale()`, `bundle()`, `keys()`, `area()`, `perimeter()`, `aspectRatio()`, `opposite()`, `nextClockwise()`
+- [MAY] Use short composition names on functional combinators.
   Example: `and(...)`, `or(...)`, `negate()`, `compose(...)`, `identity()`
 - [MUST] Java records keep generated accessor names.
   Example: `x()`, `y()`
@@ -249,59 +225,33 @@ Use these method naming patterns across the codebase.
 ## Javadoc
 
 - [MUST] Document public types at API/module boundaries and public types with non-obvious responsibilities.
-- [MUST] Document public methods at API boundaries and non-obvious behavior.
-- [MAY] Use concise type-level Javadoc for small internal contracts when method naming is already clear.
-- [MUST] Document intent, inputs, outputs, and significant side effects.
+- [MUST] Document public methods at API boundaries and non-obvious behavior, covering intent, inputs, outputs, and
+  significant side effects.
 - [SHOULD] Describe behavior; avoid implementation detail unless it is contract-relevant.
-- [MUST] Use `@param`, `@return`, and `@throws` when applicable.
-- [SHOULD NOT] Add Javadoc to pure `@Override` methods when inherited docs already fully define the contract.
-- [MUST] Add override Javadoc when the override adds constraints, side effects, or surprising semantics.
+- [SHOULD NOT] Add Javadoc to pure `@Override` methods when inherited docs already fully define the contract; add
+  override Javadoc when the override adds constraints, side effects, or surprising semantics.
 - [MUST NOT] Add routine `NullPointerException` notes for non-null-by-default contracts.
-- [MAY] Add Javadoc to `private` members when it adds important context.
-- [MUST] Keep Javadoc short, factual, and current.
 
 ## Logging
 
 The repository uses the `AppLogger` facade (built on `java.util.logging`) as the single logging entry point.
 
-- [MUST] Use `de.mkalb.etpetssim.core.AppLogger` for all application logging; do not call `java.util.logging`,
-  `System.out`, or `System.err` directly for diagnostic output.
-- [MUST NOT] Add other logging frameworks (SLF4J, Log4j, Logback, …) to the project.
-- [MUST] Initialize logging exactly once at application startup via `AppLogger.initialize(...)`; use
-  `AppLogger.initializeForTesting()` in tests that require logging.
-- [MUST] Shut down logging via `AppLogger.shutdown()` during orderly application termination.
-- [MUST] Choose log levels by intent:
-    - `debug` for developer diagnostics and verbose traces.
-    - `info` for lifecycle and high-level state transitions.
-    - `warn` for recoverable anomalies and unexpected but non-fatal conditions.
-    - `error` for failures and exceptions that affect functionality.
+- [MUST] Use `de.mkalb.etpetssim.core.AppLogger` for all application logging.
 - [MUST] Log exceptions via `AppLogger.error(message, throwable)`; do not concatenate stack traces into the message
   manually.
 - [SHOULD] Use the `Supplier<String>` overloads (`debug(() -> ...)`, `info(() -> ...)`, …) when message construction is
   non-trivial, to avoid unnecessary string building when the level is disabled.
 - [SHOULD] Use the `*f` formatting overloads (`debugf`, `infof`, `warnf`, `errorf`) for parameterized messages instead
   of manual `String.format(...)` at the call site.
-- [MUST] Use `Locale.ROOT` semantics for log message formatting; the `*f` overloads already do so. Do not introduce
-  locale-dependent formatting in log messages.
-- [MUST NOT] Log secrets, credentials, tokens, or personally identifying information.
-- [SHOULD] Prefix log messages with a short, stable component tag when helpful (for example
-  `"AppLogger: ..."`, `"SimulationTimer: ..."`) to aid log filtering.
-- [SHOULD NOT] Log inside tight rendering or simulation step loops at `info` or higher; use `debug` and guard expensive
-  message construction with the `Supplier` overloads.
-- [MUST NOT] Use logging as a control-flow mechanism or as a substitute for thrown exceptions.
+- [SHOULD] Prefix log messages with a short, stable component tag when helpful (for example `"SimulationTimer: ..."`)
+  to aid log filtering.
+- [SHOULD NOT] Log inside tight rendering or simulation step loops at `info` or higher.
 
 ## Testing
 
 ### Test Framework
 
-- [MUST] Use **JUnit 5** (JUnit Jupiter) executed via the **JUnit Platform**.
-- [MUST] Declare test dependencies through the `libs.versions.toml` version catalog (for example
-  `libs.junit.jupiter`, `libs.junit.platform.launcher`).
-- [MUST] Run tests with `useJUnitPlatform()` in Gradle.
-- [MUST] Use only `org.junit.jupiter.api.*` / `org.junit.jupiter.params.*` APIs; do not add JUnit 4 (`org.junit.*`)
-  tests.
-- [SHOULD] Run JavaFX-touching tests with the project's headless JVM args (`-Djavafx.headless=true`, `-Dprism.order=sw`,
-  `--enable-native-access=ALL-UNNAMED`) configured in `app/build.gradle.kts`.
+- [MUST] Use **JUnit 5** (JUnit Jupiter) executed via the **JUnit Platform**; do not add JUnit 4 (`org.junit.*`) tests.
 - [MUST NOT] Add additional test runners or frameworks (TestNG, Spock, AssertJ, Mockito, …) without prior agreement.
 
 ### Test Structure
@@ -310,23 +260,17 @@ The repository uses the `AppLogger` facade (built on `java.util.logging`) as the
 - [SHOULD] Prefer `final` for test classes unless extension is required.
 - [MUST] Use consistent lifecycle names such as `setUpBeforeAll`, `setUpBeforeEach`, `tearDownAfterEach`.
 - [MUST] Reset shared static or global state in `@BeforeEach` whenever such state exists.
-- [SHOULD] Use same-thread execution when shared state requires deterministic ordering.
 - [MUST] Initialize JavaFX once in `@BeforeAll` via `FxTestSupport.ensureStarted()` for JavaFX tests.
-- [MUST] Keep test packages `@NullMarked`; test null contracts with assertions.
 
 ### Assertions and Semantics
 
 - [SHOULD] Use `assertAll(...)` for grouped checks of a single behavior.
 - [MUST] Use `assertThrows(...)` for contract/error-path checks.
-- [MUST] Follow `@SuppressWarnings` rules from the Tooling section.
-- [MUST NOT] Commit empty TODO test methods.
 - [MUST] Use `@Disabled("reason")` with a clear reason for temporary test disabling.
 
 ### Test Naming
 
-- [MUST] Start test method names with `test`.
-- [MUST] Continue with the behavior or scenario under test.
-- [MUST] Keep names specific and readable.
+- [MUST] Start test method names with `test`, followed by the behavior or scenario under test.
 - [SHOULD NOT] Add Javadoc to test classes/methods unless genuinely needed.
 
 ## Tooling
